--- a/src/components/card-list/card-list.component.css
+++ b/src/components/card-list/card-list.component.css
@@ -5,5 +5,8 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-bottom: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   
