--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,6 +1,7 @@
 .card-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: #95dada;
     border: 1px solid grey;
     border-radius: 5px;
@@ -10,6 +11,7 @@
     backface-visibility: hidden;
     transform: translateZ(0);
     transition: transform 0.25s ease-out;
+    width: 200px;
   }
   
   .card-container:hover {
